@@ -52,6 +52,7 @@ import org.graalvm.compiler.graph.Graph;
 import org.graalvm.compiler.phases.util.Providers;
 
 import jdk.vm.ci.meta.ResolvedJavaMethod;
+import uk.ac.manchester.tornado.api.DRMode;
 import uk.ac.manchester.tornado.api.GridScheduler;
 import uk.ac.manchester.tornado.api.ImmutableTaskGraph;
 import uk.ac.manchester.tornado.api.KernelContext;
@@ -90,6 +91,7 @@ import uk.ac.manchester.tornado.api.exceptions.TornadoRuntimeException;
 import uk.ac.manchester.tornado.api.exceptions.TornadoTaskRuntimeException;
 import uk.ac.manchester.tornado.api.profiler.ProfilerType;
 import uk.ac.manchester.tornado.api.profiler.TornadoProfiler;
+import uk.ac.manchester.tornado.api.runtime.ExecutorFrame;
 import uk.ac.manchester.tornado.api.runtime.TornadoRuntime;
 import uk.ac.manchester.tornado.api.types.arrays.DoubleArray;
 import uk.ac.manchester.tornado.api.types.arrays.FloatArray;
@@ -101,10 +103,10 @@ import uk.ac.manchester.tornado.runtime.TornadoVM;
 import uk.ac.manchester.tornado.runtime.analyzer.MetaReduceCodeAnalysis;
 import uk.ac.manchester.tornado.runtime.analyzer.ReduceCodeAnalysis;
 import uk.ac.manchester.tornado.runtime.analyzer.TaskUtils;
-import uk.ac.manchester.tornado.runtime.common.DeviceObjectState;
+import uk.ac.manchester.tornado.runtime.common.XPUDeviceBufferState;
 import uk.ac.manchester.tornado.runtime.common.RuntimeUtilities;
 import uk.ac.manchester.tornado.runtime.common.Tornado;
-import uk.ac.manchester.tornado.runtime.common.TornadoAcceleratorDevice;
+import uk.ac.manchester.tornado.runtime.common.TornadoXPUDevice;
 import uk.ac.manchester.tornado.runtime.common.TornadoOptions;
 import uk.ac.manchester.tornado.runtime.common.TornadoVMClient;
 import uk.ac.manchester.tornado.runtime.graal.compiler.TornadoSuitesProvider;
@@ -156,10 +158,11 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     private TornadoVMBytecodeBuilder tornadoVMBytecodeBuilder;
     private long batchSizeBytes = -1;
     private long memoryLimitSizeBytes = -1;
-    private boolean bailout = false;
-    // One TornadoVM instance per TaskSchedule
-    private TornadoVM vm;
-    private Map<TornadoAcceleratorDevice, TornadoVM> vmTable;
+
+    private TornadoVM vm;  // One TornadoVM instance per TornadoExecutionPlan
+
+    // HashMap to keep an instance of the TornadoVM per Device 
+    private Map<TornadoXPUDevice, TornadoVM> vmTable;
     private Event event;
     private String taskGraphName;
     private List<TaskPackage> taskPackages;
@@ -190,7 +193,9 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
     private ProfilerMode profilerMode;
 
-    private boolean cocurrentDevices;
+    private boolean isConcurrentDevicesEnabled;
+    private long executionPlanId;
+    private boolean bailout;
 
     /**
      * Task Schedule implementation that uses GPU/FPGA and multicore backends. This constructor must be public. It is invoked using the reflection API.
@@ -225,7 +230,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             case 0:
                 break;
             case 1:
-                task.transferToDevice(dataTransferMode, inputObjects.get(0));
+                task.transferToDevice(dataTransferMode, inputObjects.getFirst());
                 break;
             case 2:
                 task.transferToDevice(dataTransferMode, inputObjects.get(0), inputObjects.get(1));
@@ -295,7 +300,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             case 0:
                 break;
             case 1:
-                task.transferToHost(mode, outputArrays.get(0));
+                task.transferToHost(mode, outputArrays.getFirst());
                 break;
             case 2:
                 task.transferToHost(mode, outputArrays.get(0), outputArrays.get(1));
@@ -396,7 +401,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         newTaskGraph.streamOutObjects = Collections.unmodifiableList(this.streamOutObjects);
         newTaskGraph.hlBuffer = this.hlBuffer;
 
-        this.executionContext.createImmutableExecutionContext(newTaskGraph.executionContext);
+        newTaskGraph.executionContext = this.executionContext.clone();
 
         newTaskGraph.taskPackages = Collections.unmodifiableList(this.taskPackages);
         newTaskGraph.argumentsLookUp = Collections.unmodifiableSet(this.argumentsLookUp);
@@ -441,12 +446,12 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
     @Override
     public void withConcurrentDevices() {
-        this.cocurrentDevices = true;
+        this.isConcurrentDevicesEnabled = true;
     }
 
     @Override
     public void withoutConcurrentDevices() {
-        this.cocurrentDevices = false;
+        this.isConcurrentDevicesEnabled = false;
     }
 
     @Override
@@ -467,6 +472,12 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     @Override
     public void withoutPrintKernel() {
         meta().disablePrintKernel();
+    }
+
+    @Override
+    public void withGridScheduler(GridScheduler gridScheduler) {
+        this.gridScheduler = gridScheduler;
+        checkGridSchedulerNames();
     }
 
     @Override
@@ -512,8 +523,8 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
         //Release locked buffers from the old device and lock them on the new one.
         for (LocalObjectState localState : executionContext.getObjectStates()) {
-            final GlobalObjectState globalState = localState.getGlobalState();
-            final DeviceObjectState deviceState = globalState.getDeviceState(oldDevice);
+            final DataObjectState globalState = localState.getGlobalState();
+            final XPUDeviceBufferState deviceState = globalState.getDeviceState(oldDevice);
             if (deviceState.isLockedBuffer()) {
                 releaseObjectFromDeviceMemory(localState, oldDevice);
                 reuseDeviceBufferObject(localState, device);
@@ -549,8 +560,8 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
         // Release locked buffers from the old device and lock them on the new one.
         for (LocalObjectState localState : executionContext.getObjectStates()) {
-            final GlobalObjectState globalState = localState.getGlobalState();
-            final DeviceObjectState deviceState = globalState.getDeviceState(oldDevice);
+            final DataObjectState globalState = localState.getGlobalState();
+            final XPUDeviceBufferState deviceState = globalState.getDeviceState(oldDevice);
             if (deviceState.isLockedBuffer()) {
                 releaseObjectFromDeviceMemory(localState, oldDevice);
                 reuseDeviceBufferObject(localState, device);
@@ -560,7 +571,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     }
 
     @Override
-    public TornadoAcceleratorDevice getDeviceForTask(String id) {
+    public TornadoXPUDevice getDeviceForTask(String id) {
         return executionContext.getDeviceForTask(id);
     }
 
@@ -630,6 +641,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                     : STR."\{((CompilableTask) task).getMethod().getDeclaringClass().getSimpleName()}.\{task.getTaskName()}";
             timeProfiler.registerMethodHandle(ProfilerType.METHOD, task.getId(), methodName);
         }
+
     }
 
     private void updateDeviceContext() {
@@ -642,7 +654,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
      * @param setNewDevice:
      *     boolean that specifies if set a new device or not.
      */
-    private TornadoVM compile(boolean setNewDevice) {
+    private TornadoVM compileGraphAndBuildVM(boolean setNewDevice) {
         final ByteBuffer buffer = ByteBuffer.wrap(highLevelCode);
         buffer.order(ByteOrder.LITTLE_ENDIAN);
         buffer.limit(hlBuffer.position());
@@ -666,7 +678,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         return tornadoVM;
     }
 
-    private boolean compareDevices(Set<TornadoAcceleratorDevice> lastDevices, TornadoAcceleratorDevice device2) {
+    private boolean compareDevices(Set<TornadoXPUDevice> lastDevices, TornadoXPUDevice device2) {
         return lastDevices.contains(device2);
     }
 
@@ -722,12 +734,12 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         return true;
     }
 
-    private boolean compileToTornadoVMBytecode() {
+    private boolean compileComputeGraphToTornadoVMBytecode() {
         CompileInfo compileInfo = extractCompileInfo();
         if (compileInfo.compile) {
             timeProfiler.start(ProfilerType.TOTAL_BYTE_CODE_GENERATION);
             executionContext.scheduleTaskToDevices();
-            TornadoVM tornadoVM = compile(compileInfo.updateDevice);
+            TornadoVM tornadoVM = compileGraphAndBuildVM(compileInfo.updateDevice);
             vmTable.put(meta().getLogicDevice(), tornadoVM);
             timeProfiler.stop(ProfilerType.TOTAL_BYTE_CODE_GENERATION);
         }
@@ -759,11 +771,11 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     /**
      * If current FPGA execution and JIT mode, then run warm-up.
      */
-    private void preCompilationForFPGA() {
+    private void preCompileForFPGAs() {
         boolean compile = false;
         if (TornadoOptions.FPGA_EMULATION) {
             compile = true;
-        } else if (executionContext.getDeviceOfFirstTask() instanceof TornadoAcceleratorDevice tornadoAcceleratorDevice) {
+        } else if (executionContext.getDeviceOfFirstTask() instanceof TornadoXPUDevice tornadoAcceleratorDevice) {
             if (tornadoAcceleratorDevice.isFullJITMode(executionContext.getTask(0))) {
                 compile = true;
             }
@@ -803,10 +815,12 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         }
     }
 
-    private void dumpDeoptReason(TornadoBailoutRuntimeException e) {
+    private void dumpDeoptimisationReason(TornadoBailoutRuntimeException e) {
         if (!Tornado.DEBUG) {
             System.err.println(STR."\{RED}[Bailout] Running the sequential implementation. Enable --debug to see the reason.\{RESET}");
-        } else {
+        }else
+
+    {
             System.err.println(e.getMessage());
             for (StackTraceElement s : e.getStackTrace()) {
                 System.err.println(STR."\t\{s}");
@@ -814,28 +828,26 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         }
     }
 
-    private void deoptimizeToSequentialJava(TornadoBailoutRuntimeException e) {
-        // Execute the sequential code
-        dumpDeoptReason(e);
+    private void deoptimiseToSequentialJava(TornadoBailoutRuntimeException e) {
+        dumpDeoptimisationReason(e);
         runAllTasksJavaSequential();
     }
 
     @Override
     public void scheduleInner() {
-
-        boolean compile = compileToTornadoVMBytecode();
-        TornadoAcceleratorDevice deviceForTask = executionContext.getDeviceForTask(0);
+        boolean compile = compileComputeGraphToTornadoVMBytecode();
+        TornadoXPUDevice deviceForTask = executionContext.getDeviceForTask(0);
         if (compile && deviceForTask.getDeviceContext().isPlatformFPGA()) {
-            preCompilationForFPGA();
+            preCompileForFPGAs();
         }
 
         try {
-            event = vm.execute(cocurrentDevices, timeProfiler);
+            event = vm.execute(isConcurrentDevicesEnabled, timeProfiler);
             timeProfiler.stop(ProfilerType.TOTAL_TASK_GRAPH_TIME);
             updateProfiler();
         } catch (TornadoBailoutRuntimeException e) {
             if (TornadoOptions.RECOVER_BAILOUT) {
-                deoptimizeToSequentialJava(e);
+                deoptimiseToSequentialJava(e);
             } else {
                 if (Tornado.DEBUG) {
                     e.printStackTrace();
@@ -881,18 +893,22 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         if (Tornado.VM_USE_DEPS && event != null) {
             event.waitOn();
         } else {
-            executionContext.getDevices().stream().filter(Objects::nonNull).forEach(TornadoDevice::sync);
+            for (TornadoXPUDevice tornadoXPUDevice : executionContext.getDevices()) {
+                if (tornadoXPUDevice != null) {
+                    tornadoXPUDevice.sync(executionPlanId);
+                }
+            }
         }
     }
 
     @Override
     public void transferToDevice(final int mode, Object... objects) {
-        for (Object functionParameter : objects) {
-            if (functionParameter == null) {
+        for (Object parameter : objects) {
+            if (parameter == null) {
                 throw new TornadoRuntimeException(STR."[ERROR] null object passed into streamIn() in schedule \{executionContext.getId()}");
             }
 
-            if (functionParameter instanceof Number) {
+            if (parameter instanceof Number) {
                 continue;
             }
 
@@ -900,20 +916,23 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             // EVERY_EXECUTION
             boolean isObjectForStreaming = false;
             if (mode == DataTransferMode.EVERY_EXECUTION) {
-                streamInObjects.add(functionParameter);
+                streamInObjects.add(parameter);
                 isObjectForStreaming = true;
             }
 
-            executionContext.getObjectState(functionParameter).setStreamIn(isObjectForStreaming);
-
-            argumentsLookUp.add(functionParameter);
-
+            executionContext.getLocalStateObject(parameter).setStreamIn(isObjectForStreaming);
+            
             // List of input objects for the dynamic reconfiguration
-            inputModesObjects.add(new StreamingObject(mode, functionParameter));
+            inputModesObjects.add(new StreamingObject(mode, parameter));
 
             if (TornadoOptions.isReusedBuffersEnabled()) {
-                lockObjectsInMemory(functionParameter);
+                if (!argumentsLookUp.contains(parameter)) {
+                    // We already set function parameter in transferToHost
+                    lockObjectsInMemory(parameter);
+                }
             }
+
+            argumentsLookUp.add(parameter);
         }
     }
 
@@ -941,17 +960,20 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             // hash-set.
             if (mode != DataTransferMode.UNDER_DEMAND) {
                 streamOutObjects.add(functionParameter);
-                executionContext.getObjectState(functionParameter).setStreamOut(true);
+                executionContext.getLocalStateObject(functionParameter).setStreamOut(true);
             }
-
-            argumentsLookUp.add(functionParameter);
 
             // List of output objects for the dynamic reconfiguration
             outputModeObjects.add(new StreamingObject(mode, functionParameter));
 
             if (TornadoOptions.isReusedBuffersEnabled()) {
-                lockObjectsInMemory(functionParameter);
+                if (!argumentsLookUp.contains(functionParameter)) {
+                    // We already set function parameter in transferToDevice
+                    lockObjectsInMemory(functionParameter);
+                }
             }
+
+            argumentsLookUp.add(functionParameter);
         }
     }
 
@@ -982,7 +1004,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         getDevice().getDeviceContext().setResetToFalse();
         timeProfiler.clean();
 
-        compileToTornadoVMBytecode();
+        compileComputeGraphToTornadoVMBytecode();
         vm.warmup();
 
         if (TornadoOptions.isProfilerEnabled() && !TornadoOptions.PROFILER_LOGS_ACCUMULATE()) {
@@ -991,13 +1013,13 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     }
 
     private void reuseDeviceBufferObject(Object object) {
-        final LocalObjectState localState = executionContext.getObjectState(object);
+        final LocalObjectState localState = executionContext.getLocalStateObject(object);
         reuseDeviceBufferObject(localState, meta().getLogicDevice());
     }
 
     private void reuseDeviceBufferObject(final LocalObjectState localState, final TornadoDevice device) {
-        final GlobalObjectState globalState = localState.getGlobalState();
-        final DeviceObjectState deviceState = globalState.getDeviceState(device);
+        final DataObjectState globalState = localState.getGlobalState();
+        final XPUDeviceBufferState deviceState = globalState.getDeviceState(device);
         deviceState.setLockBuffer(true);
     }
 
@@ -1021,13 +1043,13 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     }
 
     private void freeDeviceMemoryObject(Object object) {
-        final LocalObjectState localState = executionContext.getObjectState(object);
+        final LocalObjectState localState = executionContext.getLocalStateObject(object);
         releaseObjectFromDeviceMemory(localState, meta().getLogicDevice());
     }
 
     private void releaseObjectFromDeviceMemory(final LocalObjectState localState, final TornadoDevice device) {
-        final GlobalObjectState globalState = localState.getGlobalState();
-        final DeviceObjectState deviceState = globalState.getDeviceState(device);
+        final DataObjectState globalState = localState.getGlobalState();
+        final XPUDeviceBufferState deviceState = globalState.getDeviceState(device);
         deviceState.setLockBuffer(false);
         if (deviceState.hasObjectBuffer()) {
             device.deallocate(deviceState);
@@ -1045,24 +1067,24 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     }
 
     private Event syncObjectInner(Object object) {
-        final LocalObjectState localState = executionContext.getObjectState(object);
-        final GlobalObjectState globalState = localState.getGlobalState();
-        final TornadoAcceleratorDevice device = meta().getLogicDevice();
-        final DeviceObjectState deviceState = globalState.getDeviceState(device);
+        final LocalObjectState localState = executionContext.getLocalStateObject(object);
+        final DataObjectState globalState = localState.getGlobalState();
+        final TornadoXPUDevice device = meta().getLogicDevice();
+        final XPUDeviceBufferState deviceState = globalState.getDeviceState(device);
         if (deviceState.isLockedBuffer()) {
-            return device.resolveEvent(device.streamOutBlocking(object, 0, deviceState, null));
+            return device.resolveEvent(executionPlanId, device.streamOutBlocking(executionPlanId, object, 0, deviceState, null));
         }
         return null;
     }
 
     private Event syncObjectInner(Object object, long offset, long partialCopySize) {
-        final LocalObjectState localState = executionContext.getObjectState(object);
-        final GlobalObjectState globalState = localState.getGlobalState();
-        final TornadoAcceleratorDevice device = meta().getLogicDevice();
-        final DeviceObjectState deviceState = globalState.getDeviceState(device);
+        final LocalObjectState localState = executionContext.getLocalStateObject(object);
+        final DataObjectState globalState = localState.getGlobalState();
+        final TornadoXPUDevice device = meta().getLogicDevice();
+        final XPUDeviceBufferState deviceState = globalState.getDeviceState(device);
         deviceState.setPartialCopySize(partialCopySize);
         if (deviceState.isLockedBuffer()) {
-            return device.resolveEvent(device.streamOutBlocking(object, offset, deviceState, null));
+            return device.resolveEvent(executionPlanId, device.streamOutBlocking(executionPlanId, object, offset, deviceState, null));
         }
         return null;
     }
@@ -1113,11 +1135,11 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                     continue;
                 }
                 long value = timeProfiler.getTimer(ProfilerType.COPY_OUT_TIME_SYNC);
-                eventParameter.waitForEvents();
+                eventParameter.waitForEvents(executionPlanId);
                 value += eventParameter.getElapsedTime();
                 timeProfiler.setTimer(ProfilerType.COPY_OUT_TIME_SYNC, value);
-                LocalObjectState localState = executionContext.getObjectState(objects[i]);
-                DeviceObjectState deviceObjectState = localState.getGlobalState().getDeviceState(meta().getLogicDevice());
+                LocalObjectState localState = executionContext.getLocalStateObject(objects[i]);
+                XPUDeviceBufferState deviceObjectState = localState.getGlobalState().getDeviceState(meta().getLogicDevice());
                 timeProfiler.addValueToMetric(ProfilerType.COPY_OUT_SIZE_BYTES_SYNC, TimeProfiler.NO_TASK_NAME, deviceObjectState.getObjectBuffer().size());
             }
             updateProfiler();
@@ -1144,11 +1166,11 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             timeProfiler.clean();
             if (event != null) {
                 long value = timeProfiler.getTimer(ProfilerType.COPY_OUT_TIME_SYNC);
-                event.waitForEvents();
+                event.waitForEvents(executionPlanId);
                 value += event.getElapsedTime();
                 timeProfiler.setTimer(ProfilerType.COPY_OUT_TIME_SYNC, value);
-                LocalObjectState localState = executionContext.getObjectState(object);
-                DeviceObjectState deviceObjectState = localState.getGlobalState().getDeviceState(meta().getLogicDevice());
+                LocalObjectState localState = executionContext.getLocalStateObject(object);
+                XPUDeviceBufferState deviceObjectState = localState.getGlobalState().getDeviceState(meta().getLogicDevice());
                 timeProfiler.addValueToMetric(ProfilerType.COPY_OUT_SIZE_BYTES_SYNC, TimeProfiler.NO_TASK_NAME, deviceObjectState.getObjectBuffer().size());
                 updateProfiler();
             }
@@ -1257,56 +1279,70 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         }
     }
 
-    @Override
-    public TornadoTaskGraphInterface schedule() {
+    private void bailout() {
+        if (!TornadoOptions.RECOVER_BAILOUT) {
+            throw new TornadoBailoutRuntimeException("[TornadoVM] Error - Recover option disabled");
+        } else {
+            runAllTasksJavaSequential();
+        }
+    }
 
-        setupProfiler();
-        isFinished = false;
+    private TornadoTaskGraphInterface execute() {
+
+        // check if bailout due to task-rewriting
         if (bailout) {
-            if (!TornadoOptions.RECOVER_BAILOUT) {
-                throw new TornadoBailoutRuntimeException("[TornadoVM] Error - Recover option disabled");
-            } else {
-                runAllTasksJavaSequential();
-                return this;
-            }
+            bailout();
         }
 
+        isFinished = false;
+        setupProfiler();
         timeProfiler.clean();
         timeProfiler.start(ProfilerType.TOTAL_TASK_GRAPH_TIME);
 
-        TornadoTaskGraphInterface executionGraph = null;
+        // Single context ID per execution plan.
+        // This is used to create/obtain low-level command queues from the driver
+        // and other resources (e.g., Level Zero Command Lists).
+        executionContext.setExecutionPlanId(executionPlanId);
+
+        TornadoTaskGraphInterface reduceTaskGraph = null;
         if (TornadoOptions.EXPERIMENTAL_REDUCE && !(getId().startsWith(TASK_GRAPH_PREFIX))) {
-            executionGraph = analyzeSkeletonAndRun();
+            reduceTaskGraph = analyzeSkeletonAndRun();
         }
 
-        if (executionGraph != null) {
-            return executionGraph;
+        if (reduceTaskGraph != null) {
+            return reduceTaskGraph;
         }
 
         // check parameter list
         if (TornadoOptions.FORCE_CHECK_PARAMETERS) {
-            try {
-                checkAllArgumentsPerTask();
-            } catch (TornadoTaskRuntimeException e) {
-                throw new TornadoTaskRuntimeException(e.toString());
-            }
+            checkAllArgumentsPerTask();
         }
 
         lockInPendingFieldsObjects();
-
         analysisTaskGraph = null;
-        scheduleInner();
-        cleanUp();
+
+        try {
+            scheduleInner();
+            cleanUp();
+        } catch (TornadoRuntimeException e) {
+            bailout();
+        }
         return this;
     }
 
     @Override
-    public TornadoTaskGraphInterface schedule(GridScheduler gridScheduler) {
-        this.gridScheduler = gridScheduler;
-        // check schedule names
-        checkGridSchedulerNames();
-        // Schedule the task-graph
-        return schedule();
+    public TornadoTaskGraphInterface execute(ExecutorFrame executionPackage) {
+        executionPlanId = executionPackage.getExecutionPlanId();
+        if (executionPackage.getDynamicReconfigurationPolicy() == null) {
+            return execute();
+        } else {
+            if (executionPackage.getDRMode() == DRMode.SERIAL) {
+                return scheduleDynamicReconfigurationSequential(executionPackage.getDynamicReconfigurationPolicy());
+            } else if (executionPackage.getDRMode() == DRMode.PARALLEL) {
+                return scheduleDynamicReconfigurationParallel(executionPackage.getDynamicReconfigurationPolicy());
+            }
+            throw new TornadoRuntimeException("");
+        }
     }
 
     private boolean isTaskNamePresent(String taskName) {
@@ -1534,8 +1570,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                 for (StreamingObject streamingObject : outputModeObjects) {
                     performStreamOutThreads(streamingObject.mode, task, streamingObject.object);
                 }
-                // performStreamOutThreads(task, streamOutObjects);
-
+                
                 ImmutableTaskGraph immutableTaskGraph = task.snapshot();
                 TornadoExecutionPlan executor = new TornadoExecutionPlan(immutableTaskGraph);
 
@@ -1658,8 +1693,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         executor.execute();
     }
 
-    @Override
-    public TornadoTaskGraphInterface scheduleWithProfile(Policy policy) {
+    private TornadoTaskGraphInterface scheduleDynamicReconfigurationParallel(Policy policy) {
         if (policyTimeTable.get(policy) == null) {
             runScheduleWithParallelProfiler(policy);
         } else {
@@ -1917,8 +1951,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         return size;
     }
 
-    @Override
-    public TornadoTaskGraphInterface scheduleWithProfileSequential(Policy policy) {
+    private TornadoTaskGraphInterface scheduleDynamicReconfigurationSequential(Policy policy) {
 
         if (policy == Policy.LATENCY) {
             if (Tornado.DEBUG) {
